# sequencelib

./: .gitignore  FindTheorems.lean  FindTheorems.sh  Lint.lean  README.md  Sequencelib.lean  SequencelibLite.lean  Taskfile.yml  Tests.lean  a  added  flake.nix  lake-manifest.json  lakefile.toml  max  maxes  new  old  pyproject.toml  sequencelib.sql  synth  update_docs.py  values.html.j2
Sequencelib/: A000203.lean  Basic.lean  BigOmega.lean  Catalan.lean  Defs.lean  Divisors.lean  DoubleFactorial.lean  Factorial.lean  Fib.lean  Fibonacci.lean  FiniteGroups.lean  Groups.lean  JFS_scratch.lean  Kolakoski.lean  Lucas.lean  MersenneExponents.lean  MersenneNumbers.lean  Meta.lean  MetaTest.lean  Moebius.lean  Parity.lean  Partitions.lean  Pascal.lean  Pentagonal.lean  PowersOfPrimes.lean  PowersOfTwo.lean  Primes.lean  Recaman.lean  Refactorable.lean  Ruler.lean  Sylvester.lean  Totient.lean  TriangleOfPartitions.lean  Triangular.lean
Tests/: AnotherModule.lean  TestDb.lean  TestDbExec.lean  TestDerive.lean  TestInfo.lean  TestOEISRepo.lean  TestProcess.lean  TestTag.lean
home_page/: contributing.md  index.md
nix/: cache.nix  docs.nix  interactive.nix  python.nix  sequencelib.nix  shell.nix
scripts/: Generate.lean  GetOEISInfo.lean  PopulateDb.lean  PostProcess.lean  ailoop.py  aiprover.py  aiprovertest.py  doc_index.html.j2  export_data.py  gen_mcp_config.py  generate_imports.py  ipython_config.py  mcp_server.py  new_sequence_template.py  nolints.json  oeis.py  run_docker-small.sh  run_docker.sh  run_hpc.sh  run_hpc_small.sh  seq.j2  synethesize.py  synthesize.py  (+2 more)
(+42193 files in other folders)
